# ultra

./: .gitignore  CMakeLists.txt  README.md
examples/: main.cpp
examples/asdas/: product.entity.hpp
examples/hello/: main.cpp
examples/hello/res/: .env
examples/models/: model.def  one_to_many.def  one_to_one.def  passport.entity.hpp  product.entity.hpp  some_product.entity.hpp  user.entity.hpp
include/: driver.hpp
src/core/src/: session.cpp
src/drivers/include/: mysql_result_set.hpp
src/sql/include/: column.hpp  insert_query_builder.hpp  user.test.hpp
src/sql/src/: sql_builder.cpp
ultra/: CMakeLists.txt
ultra/cmake/: ultraConfig.cmake.in
ultra/core/: CMakeLists.txt
ultra/core/enum/: status.hpp
ultra/core/include/: class_metadata.hpp  column.hpp  link.hpp  puretable.hpp  session.hpp
ultra/core/src/: session.cpp
ultra/drivers/: CMakeLists.txt
ultra/drivers/enum/: driver_type.hpp
ultra/drivers/include/: driver_factory.hpp  idriver.hpp  iresult_set.hpp  mysql_driver.hpp  mysql_result_set.hpp  oracle_driver.hpp  postgres_driver.hpp
ultra/drivers/interfaces/: idriver.hpp  iresult_set.hpp
ultra/drivers/src/: driver_factory.cpp  mysql_driver.cpp  mysql_result_set.cpp
ultra/include/: ultra.hpp
ultra/reflection/include/: macros.hpp
ultra/scanner/: CMakeLists.txt
ultra/scanner/include/: field.hpp  macros.hpp  scanner.hpp  table.hpp
ultra/scanner/src/: field.cpp  scanner.cpp
ultra/schema/: CMakeLists.txt
ultra/schema/enum/: option.hpp  sqlvar.hpp
ultra/schema/include/: dep.hpp  field.hpp  table.hpp
ultra/schema/src/: field.cpp  table.cpp
ultra/scripts/: generate_helper.py  scan_models.py
ultra/sql/: CMakeLists.txt
ultra/sql/enum/: eaggregate.hpp  escalar.hpp  expr.hpp  order_dir.hpp  sign.hpp  type.hpp
ultra/sql/include/: aggregate.hpp  column.hpp  create_table_query_builder.hpp  create_table_query_ir.hpp  delete_query_builder.hpp  drop_table_query_builder.hpp  expr.hpp  insert_query_builder.hpp  insert_query_ir.hpp  link.hpp  mysql_dialect.hpp  puretable.hpp  relation.hpp  scalar.hpp  select_query_builder.hpp  select_query_ir.hpp  sql_builder.hpp  sql_builder_factory.hpp  sql_dialect.hpp  sql_query_builder.hpp  table.hpp  type.hpp  update_query_builder.hpp  update_query_ir.hpp  value.hpp
ultra/sql/interfaces/: sql_dialect.hpp  sql_query_builder.hpp  table.hpp
ultra/sql/src/: aggregate.cpp  column.cpp  create_table_query_builder.cpp  delete_query_builder.cpp  drop_table_query_builder.cpp  expr.cpp  insert_query_builder.cpp  mysql_dialect.cpp  select_query_builder.cpp  sql_builder.cpp  update_query_builder.cpp  value.cpp
ultra/utils/: CMakeLists.txt  pass.hpp  user.hpp
ultra/utils/enum/: option.hpp  var.hpp
ultra/utils/include/: comparator.hpp  converter.hpp  sql.hpp
ultra/utils/src/: converter.cpp  sql.cpp
